--- a/week-07/day-4/04_SignUpForm/SignUpForm.html
+++ b/week-07/day-4/04_SignUpForm/SignUpForm.html
@@ -13,7 +13,6 @@
             <h1>Sign up</h1>
             <div class="row">
                 <div class="col">
-                    
                     <input type="text" name="name" placeholder="Username" required>
                     <input type="email" name="email" placeholder="E-mail" required>
                     <input type="password" name="password" placeholder="Password" required>
@@ -22,10 +21,11 @@
                 </div>
 
                 <div class="or">
-                        <span>OR</span>
-                    </div>
+                    <span>OR</span>
+                </div>
 
                 <div class="col">
+                    <div class="invisiblebox"></div>
                     <a href="#" class="facebook social">Login with Facebook</a>
                     <a href="#" class="twitter social">Login with Twitter</a>
                     <a href="#" class="google social">Login with Google+</a>
